Bug 1860802 - Make non-parser-created inline module scripts with imports execute asynchronously r=smaug, a=dsmith

This reverts to the previous behaviour where inline module scripts with
dependencies would complete asynchronously. Previously this would have been
internal to the module loader base class.

Differential Revision: https://phabricator.services.mozilla.com/D192321